# ctxai

./: .env.example  .gitignore  COMPLETE_SUMMARY.md  CONFIGURATION.md  CONTRIBUTING.md  CTXAI_HOME.md  IMPLEMENTATION.md  LICENSE  README.md  ROADMAP.md  UPDATES.md  pyproject.toml
.github/workflows/: ci.yml  pr-gate.yml  release.yml
codepilot/: app.py
codepilot/tests/: test_server.py
docs/: IMPLEMENTATION_SUMMARY.md  MCP_IMPLEMENTATION_SUMMARY.md  MCP_REFACTORING.md  MCP_SERVER.md  QUERY_DASHBOARD.md
examples/: example_usage.py  mcp_config_examples.md  query_dashboard_example.py
src/code_context/: app.py  server.py
src/codecontext/: app.py
src/ctxai/: __init__.py  __main__.py  app.py  chunking.py  config.py  embeddings.py  index.py  mcp_server.py  playground.py  server.py  shell.py  size_validator.py  traversal.py  utils.py  vector_store.py
src/ctxai/commands/: __init__.py  config_command.py  dashboard_command.py  index_command.py  query_command.py  server_command.py
tests/: test_cli.py  test_index.py  test_indexing.py  test_mcp_server.py  test_query_command.py  test_server.py
