[project]
name = "codecontext"
version = "0.0.1"
description = ""
authors = [{ name = "vs4vijay", email = "vs4vijay@gmail.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
dependencies = [
    "pydantic>=2.11.10",
    "pydantic-ai>=1.0.15",
    "python-dotenv>=1.1.1",
]

[project.scripts]
codecontext = "codecontext.__main__:main"

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.3",
    "twine>=6.2.0",
]
mcp = [
    "mcp>=1.16.0",
]
server = [
    "fastapi>=0.118.0",
    "uvicorn>=0.37.0",
]

[tool.uv]
default-groups = [
    "dev",
    "mcp",
    "server",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = [
  "F841", # Unused variable
  "F401", # Unused imports
]
